cilium-cli/connectivity/builder/manifests/echo-ingress-from-other-client-knp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: echo-ingress-from-other-client
spec:
  # Allow other client to contact echo
  podSelector:
    matchLabels:
      kind: echo
  ingress:
    - from:
        - podSelector:
            matchLabels:
              other: client
            matchExpressions:
            - { key: io.cilium.k8s.policy.cluster, operator: Exists }
